--- a/blogpost/templates/blogpost/edit_blogpost.html
+++ b/blogpost/templates/blogpost/edit_blogpost.html
@@ -1,26 +1,31 @@
-{% extends 'base.html' %} {% load static %} {% load crispy_forms_tags %} 
-{% block extra_title %} - Blogpost {% endblock %} {% block extra_css %}
-<link rel="stylesheet" href="{% static 'comment/css/comment.css' %}" />
-{% endblock %} {% block page_header %}
-<div>
-  <div>
-    <div>
-      <h1 class="text-center mx-5">Edit Blog Post</h1>
+{% extends 'base.html' %}
+{% load static %} 
+{% load crispy_forms_tags %} 
+{% block extra_title %} - Blogpost {% endblock %}
+
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class="col-12 text-center text-uppercase logo-font pb-2 my-5">
+            <div class="header-text">Edit Blog post</div>
+        </div>
     </div>
-  </div>
 </div>
-{% endblock %} {% block content %}
+{% endblock %} 
+{% block content %}
 <div class="overlay"></div>
 <div class="container mt-5">
     <div class="row">
-        <div class="col-md-8 offset-md-2">
+        <div class="col-md-8 offset-md-2 mb-3">
             {{ form.instance.pk }}
             <form method="POST" enctype="multipart/form-data" action="{% url 'save_update_blogpost' form.instance.pk %}">
                 {% csrf_token %}
                 {{ form|crispy }}
                 <button type="submit" class="btn btn-primary">Update</button>
+                <a href="{% url 'product_management'%}" class="btn btn-black">Go back</a>
             </form>
-        </div>
+        </div>     
     </div>
+    
 </div>
 {% endblock %}
