--- a/blogpost/templates/blogpost/edit_list_blogpost.html
+++ b/blogpost/templates/blogpost/edit_list_blogpost.html
@@ -1,17 +1,21 @@
 {% extends 'base.html' %} {% load static %} {% load crispy_forms_tags %} 
 {% block extra_title %} - Blogpost {% endblock %} {% block extra_css %}
 <link rel="stylesheet" href="{% static 'comment/css/comment.css' %}" />
-{% endblock %} {% block page_header %}
-<div>
-  <div>
-    <div>
-      <h1 class="text-center mx-5">Edit Blog Post</h1>
+{% endblock %}
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+      <div class="col-12 text-center text-uppercase logo-font pb-2 mt-5">
+        <div class="header-text">Product Management:</div>
+          <p class="mt-3">Edit Blogpost</p>
+
+      </div>
     </div>
-  </div>
 </div>
-{% endblock %} {% block content %}
+{% endblock %}
+{% block content %}
 <div class="overlay"></div>
-<h4 class="text-center">(click BlogPost title to EDIT)</h4>
+
 <div class="mx-5">
   <table class="table-bordered table-striped mx-auto">
     <thead>
@@ -45,5 +49,8 @@
       {% endfor %}
     </tbody>
   </table>
+  <div class="text-center my-3">
+    <a href="{% url 'product_management'%}" class="btn btn-black">Go back</a>
+  </div>
 </div>
 {% endblock %}
