--- a/products/templates/products/create_product.html
+++ b/products/templates/products/create_product.html
@@ -2,40 +2,34 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block extra_title %}Products{% endblock %}
+
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col-12 text-center text-uppercase logo-font pb-2 mt-5">
+            <div class="header-text">Product Management</div>
+            <div class="text-muted text-center mt-3">Add a product</div>
         </div>
     </div>
+</div>
 {% endblock %}
-
 {% block content %}
 <div class="overlay"></div>
-    <div class="container p-3">
-        <div class="row">
-            <div class="col-12 col-md-6 mt-4">
-                <hr>
-                <h2 class="col-12 text-center logo-font pb-2 my-5">Product Management</h2>
-                <h5 class="text-muted text-center">Add a product</h5>
-                <hr>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <form enctype="multipart/form-data" method="post" action="{% url 'create_product' %}" class="form mb-2">
-                    {% csrf_token %}
-                    {{ form | crispy }}
-                    
-                    <div class="text-right">
-                        <a class="btn btn-outline-black rounded" href="{% url 'products' %}">Cancel</a>
-                        <button class="btn btn-black rounded" type="submit" >Create Product</button>
-                    </div>
-                </form>
-            </div>
+<div class="container p-3">
+    <div class="row">
+        <div class="col-12">
+            <form enctype="multipart/form-data" method="post" action="{% url 'create_product' %}" class="form mb-2">
+                {% csrf_token %}
+                {{ form | crispy }}
+                
+                <div class="text-center">
+                    <a class="btn btn-outline-black rounded" href="{% url 'products' %}">Cancel</a>
+                    <button class="btn btn-black rounded" type="submit" >Create Product</button>
+                </div>
+            </form>
         </div>
     </div>
+</div>
 
 {% endblock %}
 
