Update Media Url path

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -41,7 +41,7 @@
                                 <tr>
                                     <td class="p-3">
                                         {% if item.product.productImageName %}
-                                        <img class="img-fluid rounded" src="/media/small/{{ item.product.productImageName }}" alt="{{ item.product.title }}" style="max-width: 200px;">
+                                        <img class="img-fluid rounded" src="{{ MEDIA_URL }}small/{{ item.product.productImageName }}" alt="{{ item.product.title }}" style="max-width: 200px;">
                                         {% else %}
                                         <img class="img-fluid rounded" src="{{ MEDIA_URL }} noimage.png" alt="{{ item.product.title }}">
                                         {% endif %}
