--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -42,7 +42,7 @@
                             <div class="col-3 mb-1">
                                 <a href="{% url 'product_detail' item.product.id %}">
                                     {% if item.product.productImageName %}
-                                        <img class="w-100" src="/media/small/{{ item.product.productImageName }}" alt="{{ item.product.name  }}">
+                                        <img class="w-100" src="{{ MEDIA_URL }}small/{{ item.product.productImageName }}" alt="{{ item.product.name  }}">
                                                     
                                     {% else %}
                                         <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name  }}">
