--- a/contact/templates/contact/contact_us.html
+++ b/contact/templates/contact/contact_us.html
@@ -25,7 +25,7 @@
                 {% csrf_token %}
                 {{ form|crispy }}
                 <!-- Use the |crispy filter to style the form -->
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-black mb-2">Submit</button>
             </form>
         </div>
     </div>
