--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,20 +10,23 @@
 </div>
 {% endblock %}
 {% block content %}
-<div class="container h-100">
-    
-    <div class="row mt-5 d-flex align-items-center custom-position">
-        <div class="col-12 text-center">
-            <h1 class="text-black text-center">
-                Welcome to the Tibet Art Shop: </h1>
-            <h2 class="text-center">Discover arts and crafts from the Himalayas, where every piece tells a story.</h2>
-
+<div class="container h-100 index-background">
+<!--     
+    <div class="row mt-5 d-flex align-items-center custom-position"> -->
+    <div class="row d-flex align-items-center custom-position">
+        
+        <div class="col-12 text-center home-text">
+            <h2 class="text-black text-center custom-text ">
+                Welcome to the Tibet Art Shop: </h2>
+            <h3 class="lead">Discover arts and crafts from the Himalayas, where every piece tells a story.</h3>
+        
             <div class="my-5">
                 <h4>
-                    <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded text-uppercase py3">Shop
+                    <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded text-uppercase py-3">Shop
                         Now</a>
                 </h4>
             </div>
+        </div>
     </div>
 </div>
 
