--- a/products/templates/products/crafts_list.html
+++ b/products/templates/products/crafts_list.html
@@ -56,25 +56,24 @@
                                 </a>
                             </p>
                             {% endif %}
-                            {% if product.rating %}
-                            <small class="text-muted"><i class="fas fa-star mr-1"></i>Comments (0) Likes (0) {{ product.rating }} /
-                                5</small>
-                            {% else %}
-                            <small class="text-muted">
-                                <i class="fas fa-comment mr-1"></i>
-                                <a href="{% url 'enter_comment' entry.product.id %}">Comments ({{ entry.comment_count }})</a>
-                            </small>
-                            {% endif %}
-                            {% if request.user.is_superuser %}
-                            <small class="ml-3">
-                                <i class="fas fa-edit mr-1"></i>
-                                <a href="{% url 'edit_product' entry.product.id %}">Edit  </a>
-                            </small>
-                            <small class="ml-3">
-                                <i class="fas fa-trash mr-1"></i>
-                                <a class="text-danger" href="{% url 'delete_product' entry.product.id %}">Delete</a>
-                            </small>
-                            {% endif %}
+                            <div class="mb-3">
+                                <small class="text-muted">
+                                    <i class="fas fa-comment mr-1"></i>
+                                    <a href="{% url 'enter_comment' entry.product.id %}">Comments ({{ entry.comment_count }})</a>
+                                </small>
+
+                                {% if request.user.is_superuser %}
+                                <small class="ml-3">
+                                    <i class="fas fa-edit mr-1"></i>
+                                    <a href="{% url 'edit_product' entry.product.id %}">Edit  </a>
+                                </small>
+                                <small class="ml-3">
+                                    <i class="fas fa-trash mr-1"></i>
+                                    <a class="text-danger" href="{% url 'delete_product' entry.product.id %}">Delete</a>
+                                </small>
+                                {% endif %}
+                            </div>
+
                             <div class="d-flex">
                                 <form method="POST" action="{% url 'add_to_cart' entry.product.id %}" style="display: inline;">
                                     {% csrf_token %}
@@ -87,9 +86,9 @@
                                     {% csrf_token %}
                                     <input type="hidden" name="product_id" value="{{ entry.product.id }}">
                                     {% if is_favorited %}
-                                        <button type="submit" class="btn btn-secondary btn-sm" formaction="{% url 'remove_from_favorites' entry.product.id %}">Remove from Favorites</button>
+                                        <button type="submit" class="btn btn-sm rounded" formaction="{% url 'remove_from_favorites' entry.product.id %}">Remove from Favorites</button>
                                     {% else %}
-                                        <button type="submit" class="btn btn-secondary btn-sm" formaction="{% url 'add_to_favorites' entry.product.id %}">Add to Favorites</button>
+                                        <button type="submit" class="btn btn-sm rounded" formaction="{% url 'add_to_favorites' entry.product.id %}">Add to Favorites</button>
                                     {% endif %}
                                 </form>
                             </div>
