--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,10 +1,10 @@
 <!--  Footer -->
 <footer id="footer">
   <div class="footer-top">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row justify-content-center text-center text-lg-left">
 
-        <div class="col-lg-4 col-md-6 d-none d-md-inline-block">
+        <div class="col-lg-4 col-md-6 d-none d-md-block">
           <h5 class="text-uppercase">Tibet Art Store</h5>
           <p>
             Potsdamer Platz <br>
